# Hospital-Management

./: .env.example  .gitignore  CheckCode.py  Main.py  MakeDataBase.py  Model.py  README.md  Records  Tools.py  Untitled  admin_credits.py  admin_routes.py  agent_turn.py  bot.py  bot_realtime.py  chat_log_core.py  chat_log_events.py  chat_log_query.py  chat_log_tools.py  chat_log_turns.py  check.py  conversation_log.py  database.py  db_appointments.py  db_core.py  db_doctors.py  db_patients.py  db_prescriptions.py  db_time.py  hospital_agents.py  hospital_graph.py  hospital_routing.py  interrupt_trace.py  llm_message_dump.py  log_routes.py  mcp_demo_oauth.py  mcp_server.py  pyproject.toml  requirements.txt  service_settings.py  (+15 more)
admin/: app.js  appointments.html  appointments.js  common.js  doctor.html  doctor.js  doctors.html  doctors.js  index.html  messages.html  messages.js  patient.html  patient.js  patients.html  patients.js  style.css
client/: app.js  index.html  style.css
client-lite/: app.js  index.html  style.css
client/lib/: format.js
dataset/: appointments.json  doctors.json
shared/: tokens.css
tests/: conftest.py  test_bot_turn_strategies.py  test_chat_log.py  test_db_appointments.py  test_db_doctors.py  test_db_patients.py  test_db_prescriptions.py  test_db_time.py  test_facades.py  test_frontend_shared.py  test_hospital_routing.py  test_integration_api.py  test_integration_booking.py  test_integration_routing.py  test_llm_message_dump.py  test_service_settings.py  test_tools.py  test_voice_bridge_phone.py
